# vino-gui

./: CMakeLists.txt
include/core/: gui.h
include/core/ecs/: entity.h
include/core/renderer/: renderer.h
include/core/window_manager/: window_manager.h
lib/core/: gui.cpp
lib/core/renderer/: renderer.cpp
lib/core/window_manager/: window_manager.cpp
src/: main.cpp
